adaptation of simple design

--- a/Content/Methodology/modificationsOfXP.tex
+++ b/Content/Methodology/modificationsOfXP.tex
@@ -86,7 +86,9 @@ Although refactoring is important, we will evaluate each bad smell by severity a
 We will then decide if it is worthwhile to correct the bad smell, compared to implementing new features.
 
 \subsection{Simple Design}
-\Alexander{Needs to be written}
+To implement a simple design, we will structure our code in modules.
+Each module will contain multiple classes, which all will be short and readable.
+To improve readability we will name methods after their function and only implement features with an immediate purpose. This will prevent having code that is never used.
 
 \subsection{Small Releases}
 The purpose of this practice is to reduce the risks when or if changes in the use domain occur.
