added bibentry for xp explored

--- a/Bibliography/bibliography.bib
+++ b/Bibliography/bibliography.bib
@@ -201,3 +201,11 @@ eprint = {http://dx.doi.org/10.1076/apab.111.3.211.23464}
  publisher = {Addison-Wesley Professional},
  edition = {1st}
 } 
+
+@misc{xp:online,
+    title={Extreme Programming: A Gentle Introduction},
+    author={Don Wells},
+    year={2013},
+    howpublished = "\url{http://www.extremeprogramming.org}",
+    note = "[Online; Accessed 2015-05-26.]"
+}
