--- a/Content/Methodology/XPexplained.tex
+++ b/Content/Methodology/XPexplained.tex
@@ -1,7 +1,7 @@
 \section{Extreme Programming Explained}
 % 2 XP's: 2000 and 200? - differences.
 % General introduction to XP2k
-Extreme Programming (XP) is a software development methodology created by Kent Beck, and this section is based on his book \textit{Extreme Programming Explained (1999)} \citep{xp:explained}. 
+Extreme Programming (XP) is a software development methodology created by Kent Beck, and this section is based on his book \textit{Extreme Programming Explained (1999)} \citep{xp:explained}, \textit{Extreme Programming Explored (2000)} \citep{xp:explored}, and \textit{Extreme Programming: A Gentle Introduction (2013)} \citep{xp:online}. 
 Extreme Programming is supposed to be a lightweight, efficient, and fun approach to developing software.
 One of its core points, and one of the reasons we chose XP, is the fact it contains development oriented practices.
 
@@ -14,46 +14,46 @@ One of its core points, and one of the reasons we chose XP, is the fact it conta
 	Simple Design          		  & Small Releases   	& Testing             
 \end{tabularx}
 
-These practices also supports each other (e.g. a coding standard supports pair programming) in such a way it creates a synergistic effect.
-The complete map of which practices supports each other can be seen in \Cref{fig:practiceSupport}.
+These practices support each other (e.g. a coding standard supports pair programming), in such a way it creates a synergistic effect.
+The complete map of which practices support each other, can be seen in \Cref{fig:practiceSupport}.
 \begin{figure}[H]
 	\centering
 	\includegraphics[]{Images/xpPracticeSupport.png}
 		\caption{Map of the practices and how they support each other.
-			From page 70 in \textit{Extreme Programming Explained (1999)} \citep{xp:explained}. }
+			From \textit{Extreme Programming Explained (1999)} \citep[p. 70]{xp:explained}. }
 	\label{fig:practiceSupport}
 \end{figure}
 
 \paragraph{40-hour Week} is the suggested length of a work week in an XP project.
-This relative short week is practised because one needs to be on the top of their game when working.
+The relatively short week is practised because one needs to be on the top of their game when working.
 Being well rested and energised should reduce the number of mistakes, as well as increasing patience when pair programming.
 
-\paragraph{Coding Standards} reduces the time it takes to understand code written by others.
-A coding standard ensures all developers write code in the same way.
+\paragraph{Coding Standards} reduce the time it takes to understand code written by others.
+A coding standard also ensures that all developers write code the same way.
 This facilitates refactoring, pair programming, and encourages collective ownership.
 
 \paragraph{Collective Ownership} allows everyone to refactor and review the code.
-When no one person owns part of the code, collaboration is enforces while tedious change request are avoided.
+When no one person owns part of the code, collaboration is enforced while tedious change requests are avoided.
 
 \paragraph{Continuous Integration} is used to build the solution several times a day.
 This keeps everybody up to date with the latest code changes, avoiding development on fragmented versions.
 
 \paragraph{Metaphor} is used as a shared vision for the project.
 The metaphor is used to standardise the names of variables, methods, and classes. 
-This standardisation should help to intuitively understand the purpose of the variable, method, or class.
+This standardisation should help team members to intuitively understand the purpose of the variable, method, or class.
 
-\paragraph{On-site Customer} are a integral role in a XP project.
-The on-site customer is responsible for making decisions about priorities and requirements, as well as answering questions.
+\paragraph{On-site Customer} is an integral role in an XP project.
+The on-site customer is responsible for making decisions about priorities, requirements, and answering questions.
 
-\paragraph{Pair Programming} is the way to code in a XP project.
+\paragraph{Pair Programming} is the way to code in an XP project.
 It is when two developers work together on the same computer.
 While one writes the code, the other analyses and comes with suggestions for improvement.
-The development should be seen as a dialogue between the two developers.
+Development should be seen as a dialogue between the two developers.
 
-\paragraph{Planning Game} is the event where the customer writes user stories, after which, the developers estimates them according to cost.
+\paragraph{Planning Game} is the event where the customer writes user stories, after which the developers estimate them according to cost.
 
 \paragraph{Refactoring} is the practice used to improve the internal code without changing the external behaviour.
-In XP bad internal code is referred to as bad smells, e.g. duplicate code.
+In XP, bad internal code is referred to as bad smells, e.g. duplicate code.
 
 
 \paragraph{Simple Design} is the best design, and is defined as the easiest that work.
