review of xp explained

--- a/Content/Methodology/XPexplained.tex
+++ b/Content/Methodology/XPexplained.tex
@@ -52,19 +52,13 @@ Development should be seen as a dialogue between the two developers.
 
 \paragraph{Planning Game} is the event where the customer writes user stories, after which the developers estimate them according to cost.
 
-\paragraph{Refactoring} is the practice used to improve the internal code without changing the external behaviour.
-In XP, bad internal code is referred to as bad smells, e.g. duplicate code.
+\paragraph{Refactoring} is the practice used to improve the quality of the internal code without changing the external behaviour. Refactoring should also improve readability, and thereby maintainability.
 
+\paragraph{Simple Design} is when every piece of code justifies its own existence. The code should not have any duplicated logic, and have the fewest possible classes and method. %A simple design is the best design. For the practise to work, the code must pass all unit- and acceptance tests. Further, the best design should not  code.
 
-\paragraph{Simple Design} is defines as the best design, because it is the easiest design where everything works.
-For it to work, it must pass all unit tests and acceptance tests.
-Further the best design should be so simple it never has any duplicate code.
+\paragraph{Small Releases} are small and frequent versions of the software, which are tested by the customer.
+These releases incrementally complete the system.
 
-
-\paragraph{Small Releases} are small and frequently versions of the software, which are tested by the customer.
-These releases does incrementally complete the system.
-
-\paragraph{Testing} is a mindset, in which, unit tests are developed before the code (Test-Driven Development).
-Testing also refers to how the stories and releases are not complete before they pass their respective tests.
+\paragraph{Testing} refers to how the stories and releases are not complete, before they pass their respective tests. It is a mindset in which, unit tests are developed before the code (Test-Driven Development).
 
 %http://www.techrepublic.com/article/extreme-programming-do-these-12-practices-make-perfect/
