Expanded pair programming reflection.

--- a/Content/ReflectionMethodology/reflectionIntroduction.tex
+++ b/Content/ReflectionMethodology/reflectionIntroduction.tex
@@ -1,3 +1,5 @@
 This chapter contains the reflections and discussions about our use of XP in this project. The discussion is centered around the twelve main practices of XP, but with extra focus on three practices that were extra important for the project, namely pair programming, planning, and refactoring. These three practices are especially interesting because they required us to change our usual way of working considerably, and extra effort was put into following these particular practices. In Sections \ref{sec:musicPlayerMethodology}, \ref{sec:songScannerMethodology}, \ref{sec:stepCounterMethodology}, and \ref{sec:nguiMethodology} we presented some observations made during the project, and the following discussion is based on those observations.
 
 \Dan{Find the right methodology observations refs}
+
+\Alexander{Use appendix as a basis instead of observations}
