--- a/Content/Conclusion/extremeProgramming.tex
+++ b/Content/Conclusion/extremeProgramming.tex
@@ -33,7 +33,7 @@ At the same time testing is one of the more central practices, highly influencin
  \Dan{Der mangler noget her.}
 
 In conclusion, XP can be adapted by using it, and it should be continuously adapted to fit the project's needs. 
-There is always something that can be done to make it work a little bit better, while still adhering to the main practices.
+There is always something that can be done to make it work a little bit better, while still adhering to the main practices, and each project has unique needs.
 
 
 
