--- a/Content/TactileInterface/intro.tex
+++ b/Content/TactileInterface/intro.tex
@@ -1,4 +1,6 @@
 In this chapter user stories and implementation for the non-graphical user interface (NGUI), are described. The NGUI makes it possible to control the play, pause, stop, previous and next functionality of the music player by tapping anywhere on the screen.
 
+\Dan{Argue why we chose to use a black screen with taps over say gestures, ``shakes'', voice commands or something else}
+
 %\Kristian{repeat?}
 %The chapter contains a description of the user stories created, which acted as a basis for the development of the NGUI in regards to the requirements it should fulfill. Points of interest from its implementation are also described.
