Removed unused coments

--- a/Content/ReflectionMethodology/reflectionPairProgramming.tex
+++ b/Content/ReflectionMethodology/reflectionPairProgramming.tex
@@ -5,42 +5,20 @@ During the project we made interesting observations about \textit{interpersonal 
 
 \subsection{Workstation Setup}
 We have experimented with different kinds of workstation setup.
-%Quick overview
 The first setup we used was by exclusively using our laptops without any peripherals, i.e., two people sharing one laptop.
-%What was the results
 This resulted in difficulties for the co-driver, as it was difficult to see what was happening on the screen, due to their low quality.
 Additionally, due to the size of the laptop, it gave a sense of the driver working on his personal computer while the co-driver just observed quietly in the background, giving little sign of collaboration.
-%Why were the results as they were
 
-%How can we improve the results, possible other solutions
-
-
-%Quick overview
 The second setup we used was a purely digital solution, where we used TeamViewer to share our screens.
-%Why we used this
 We used this setup to counter the bad viewing angles of the screens, by placing each developer in front of his own screen.
 Further it should improve the collaboration, by allowing each developer to take an active roll in the development process.
-%What was the results
 We experienced this as a more comfortable way of working, now that we were not slumping over a single laptop.
 However, it gave rise to the tendency of hiding behind ones screen, even getting distracted and doing non-work related activities, leading to even less collaboration than with the first setup.
 Consequently, working with TeamViewer proved to hinder productivity more than it helped.
-%Why was the results as they were
 
-%How can we improve the results, possible other solutions
-
-
-
-%Quick overview
 The third and last setup we used was two workstations each consisting of a monitor, a keyboard, and a mouse.
-%Why we used this
 This solved some of the problems we encountered with the two other setups: there were no longer problems with bad viewing angles or sitting positions, and the co-driver could no longer hide behind his own screen.
 Additionally it removed the need for one person being forced to work on another's personal laptop, which could have been seen as a personal space violation.
-
-%What was the results
-
-%Why was the results as they were
-
-%How can we improve the results, possible other solutions
 
 Based on our experiences it was clearly the third setup that was the best.
 It provided, by far, the best work environment, which allowed us to focus on some of the other challenges associated with pair programming.
@@ -55,7 +33,6 @@ For this we also experimented with three different approaches.
 In the first approach, we changed partners whenever it felt like a good idea, but with no other restrictions than having to try doing it often, it was easy to forget.
 This resulted in the same pair often sticking together for one or even several days, which was even more problematic, especially when one of the pairs was stuck with a problem that could easily be solved by changing partners.
 
-%One such problem could be with how compatible the two programmers work styles are.
 To solve the problem of having too few partner switches, we experimented with having a fixed time of the day, where the switch occurred.
 The change was an improvement in terms of improving the feeling of collective ownership as well as preventing one pair of getting stuck with a difficult problem for too long, but it also resulted in having to split a pair in the middle of finishing a task.
 Being forced to stop working during a good flow often had a negative impact on the pair, causing them to be less useful for their new partners.
@@ -85,6 +62,9 @@ Some of these problems could maybe be alleviated if we had been better at switch
 Avoiding a certain combination in a pair may, in conclusion, be preferable to making sure all possible combinations of pairs are used throughout the project.
 
 \subsection{Expertise Level}
+\Alexander{Change subsection title}
+The everlasting question of 
+
 
 
 
